update auto/man created ini files (mame0277)

--- a/00-databases-00/sorted_info_creation/0XXX/90º.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/90º.ini
@@ -653,6 +653,7 @@ crockmnf
 crshrace
 crshrace2
 crshrace2a
+cruisin5
 crush
 crush2
 crush3
@@ -985,6 +986,7 @@ fastfred
 fastlane
 fcombat
 fenix
+fenixexpl
 fenixn
 feversos
 fghtatck
@@ -1686,6 +1688,7 @@ mamonoro
 mandinga
 mandingac
 mandingaeg
+mandingag
 mandingarf
 mandinka
 maniach
@@ -2523,6 +2526,7 @@ searcharu
 searthie
 searthin
 searthina
+searthinc
 sectrzon
 sectrzona
 sectrzont
