--- a/00-databases-00/sorted_info_creation/0XXX/good.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/good.ini
@@ -460,6 +460,8 @@ anibonusxo2
 anibonusxo3
 animalc
 animalhjb
+animalhsb
+animalhsc
 animaljr
 animaljrj
 animaljrs
@@ -600,6 +602,7 @@ arb
 arbalest
 arbv2
 arcade10
+arcade3d
 arcadecl
 arcadia
 arcadian
@@ -1418,6 +1421,7 @@ bpoker
 bradley
 brain
 brainbaf
+brainbox2
 brapboys
 brapboysp
 brapboysp2
@@ -1947,6 +1951,7 @@ cgidjp
 cgip23b
 cgip30b
 cgip30cs
+cgip30e
 cgold
 cgold2
 cgold2a
@@ -2014,6 +2019,7 @@ chelnovu
 chessac
 chesskng
 chessmst
+chessmsta
 chessmstdm
 chesster
 chesstera
@@ -2041,9 +2047,9 @@ chkndraw
 chkndrawa
 chkun
 chleague
-chleagul
-chleagxa
-chleagxb
+chleaguel
+chleaguexa
+chleaguexb
 chloe
 chmate
 chmpnum
@@ -2260,6 +2266,7 @@ coh3002c
 coh3002t
 coleco
 colecop
+colision
 colmns97
 colony7
 colony7a
@@ -2537,6 +2544,7 @@ crshrace2a
 crswd2bl
 crsword
 cruisin
+cruisin5
 crush
 crush2
 crush3
@@ -2891,6 +2899,13 @@ ddcrewjd
 ddcrewu
 ddcrewud
 ddealer
+ddellf96
+ddellf97
+ddellf97a
+ddellf97b
+ddellf97c
+ddellf97d
+ddellf97e
 ddenlovj
 ddenlovr
 ddenlovrb
@@ -3090,6 +3105,7 @@ devstorsx
 devzone
 devzone2
 df_djpkr
+df_djpkra
 dfeveron
 dfjail
 dfkbl
@@ -3943,6 +3959,7 @@ fbcrazy
 fbdeluxe
 fbdeluxeo
 fbfrenzy
+fccomp88
 fcnudge
 fcnudgeo
 fcnudgeo2
@@ -4048,6 +4065,7 @@ felega2
 felega3
 fellow
 fengyunh
+fenixexpl
 fenixn
 fever13
 feversoc
@@ -5203,6 +5221,8 @@ gticlub
 gticluba
 gticlubj
 gticlubu
+gtipoker
+gtipokrb
 gtmr
 gtmr2
 gtmr2a
@@ -6739,6 +6759,7 @@ kingofbj
 kingpin
 kingsran
 kingt_l1
+kingyosu
 kinst
 kinst2
 kinst2uk
@@ -6810,6 +6831,7 @@ kof95
 kof95a
 kof95h
 kof96
+kof96a
 kof96h
 kof97
 kof97h
@@ -6867,6 +6889,7 @@ kosmokil
 kot
 kotbinsp
 kotbinyo
+kotekita
 kothello
 kotm
 kotm2
@@ -6920,6 +6943,8 @@ kram
 krama
 krame
 kramermc
+krampcb2
+krampcb5
 krokha
 kroozr
 krull
@@ -7328,6 +7353,7 @@ luckybalb
 luckybalc
 luckybald
 luckybale
+luckybar
 luckyclo
 luckycoin
 luckygrl
@@ -7607,6 +7633,7 @@ manager
 mandinga
 mandingac
 mandingaeg
+mandingag
 mandingarf
 mandinka
 mangchi
@@ -7864,6 +7891,7 @@ megat5t
 megat5tg
 megat6
 megat7e
+megata
 megatack
 megatacka
 megatech
@@ -8106,6 +8134,7 @@ mjdiplob
 mjegolf
 mjelct3
 mjelct3a
+mjelct3b
 mjelctrb
 mjelctrn
 mjembase
@@ -8137,9 +8166,9 @@ mjmyornt
 mjmyorntr
 mjmyster
 mjmyuniv
-mjmyunivbl
-mjmyunivbl2
+mjmyunivh
 mjmywrld
+mjmywrldt
 mjnanpaa
 mjnanpas
 mjnanpau
@@ -8877,6 +8906,7 @@ new2001
 newapunk
 newfant
 newfanta
+newhilop
 newmcard
 newpuc2
 newpuc2b
@@ -8999,12 +9029,17 @@ nobb
 nochnyev
 nomnlnd
 nomnlndg
+nor6007a
+nor6007b
 norautdx
 norautjo
 norautjp
+norautn1a
 norautp
+norautpb
 norautpl
 norautpn
+norautpt
 norautra
 norautrh
 norautua
@@ -9060,7 +9095,7 @@ numanath
 numanathj
 number1
 number10
-numbr10l
+number10l
 numcrash
 nummunch
 nunchaku
@@ -9393,6 +9428,7 @@ paperboyr2
 paprazzi
 papsudok
 para2dx
+paraca
 paradice
 paradise
 paradisea
@@ -10439,6 +10475,7 @@ pjoys30
 pjoys60
 pkgnsh
 pkgnshdx
+pkii_dm
 pkladies
 pkladiesl
 pkladiesla
@@ -10484,6 +10521,7 @@ plus4
 plus4p
 plusalph
 plygonet
+pma
 pmd851
 pmd852
 pmd852a
@@ -10786,6 +10824,7 @@ psion3mx_fr
 psion3s
 psion5mx
 psioncm
+psioncmm
 psionhc100
 psionhc110
 psionhc120
@@ -11317,6 +11356,7 @@ rcdego
 rcdino4
 rchase
 rchase2
+rchase2a
 rchasej
 rchasejb
 rcirulet
@@ -12150,6 +12190,7 @@ searchp2
 searthie
 searthin
 searthina
+searthinc
 seawld
 seawldd1
 seawolf
@@ -12384,6 +12425,8 @@ sfiii3
 sfiii3j
 sfiii3jr1
 sfiii3n
+sfiii3na
+sfiii3nar1
 sfiii3nr1
 sfiii3r1
 sfiii3u
@@ -12531,6 +12574,7 @@ sharkpya
 sharkpye
 sharrier
 sharrier1
+shatekds
 shdancbl
 shdancer
 shdancer1
@@ -12633,6 +12677,7 @@ sidepcktj
 sidetrac
 sidewndr
 siena
+siena_fr
 sigma2k
 sigmapkr
 silentd
@@ -13883,6 +13928,7 @@ tatraina
 tattack
 tattass
 tattassa
+tattasso
 taurs_l1
 taxi_l3
 taxi_l4
@@ -14565,6 +14611,7 @@ triothepj
 tripdraw
 tripfev
 tripfev107us
+tripfev108us
 triplep
 triplepa
 triplew1
@@ -14712,6 +14759,7 @@ tsukande
 tsupenta
 tsuperman
 tswampt
+ttactoe
 ttchamp
 ttchampa
 ttfball
@@ -15451,6 +15499,7 @@ willowu
 willowuo
 wilytowr
 winbingo
+winbnk88
 windheat
 windheata
 windheatj
@@ -15742,7 +15791,6 @@ xybotsf
 xybotsg
 xyddzhh
 xymg
-xymga
 xyonix
 xypdk
 y301xl
