--- a/00-databases-00/sorted_info_creation/0XXX/lightgun.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/lightgun.ini
@@ -1279,6 +1279,7 @@ megat5t
 megat5tg
 megat6
 megat7e
+megata
 meritum1
 meritum2
 meritum_net
@@ -1540,10 +1541,15 @@ pc20
 pc200
 pc2086
 pc2386
+pc286u
+pc286vs
 pc3086
 pc30iii
+pc386m
 pc40iii
 pc45iii
+pc486mu
+pc486se
 pc5086
 pc50ii
 pc6001
@@ -1573,7 +1579,33 @@ pc8801mk2sr
 pc88va
 pc88va2
 pc9486
+pc9801
+pc9801bx2
+pc9801dx
+pc9801f
+pc9801fs
+pc9801rs
+pc9801rx
+pc9801us
+pc9801uv2
+pc9801ux
+pc9801vm
+pc9801vx
+pc9821
+pc9821ap2
+pc9821as
+pc9821ce2
+pc9821cx3
+pc9821nr15
+pc9821nr166
+pc9821nw150
+pc9821ra20
+pc9821ra266
+pc9821ra333
+pc9821xa16
+pc9821xs
 pc_duckh
+pc_h98s
 pc_hgaly
 pc_wgnmn
 pcb303
@@ -1867,6 +1899,7 @@ shtzone
 shutms11
 sicpc1605
 siena
+siena_fr
 sintez2
 sis85c471
 sis85c496
