--- a/00-databases-00/sorted_info_creation/0XXX/no_media.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/no_media.ini
@@ -147,6 +147,8 @@
 64street
 64streetj
 64streetja
+6578cjz1
+6578cjz2
 68ksbc
 720
 720g
@@ -917,6 +919,8 @@ anmlbskt
 anmlbskta
 anoworld
 anpanbd
+anpanm15
+anpanm19
 anpanman
 anpanman2
 anpanman2a
@@ -1016,6 +1020,7 @@ aracnisa
 arbalest
 arbv2
 arcade10
+arcade3d
 arcadecl
 arcadian
 archrivl
@@ -1590,6 +1595,7 @@ bananadr
 bananas
 bananasa
 banbam
+bancook
 banctec
 bandggcn
 bandgpad
@@ -1604,6 +1610,7 @@ bankrob
 bankroba
 bankrobb
 bankshot
+banmrid
 baoqingt
 baracuda
 baraduke
@@ -1695,6 +1702,7 @@ bayroutejd
 baywatch
 bazooka
 bazookabr
+bb6578
 bb_21up
 bb_21upa
 bb_bellt
@@ -1979,6 +1987,7 @@ bionicc2
 bioniccbl
 bioniccbl2
 bioplayc
+biorhthm
 bioship
 biplane
 biplane4
@@ -2092,6 +2101,7 @@ blktigerm
 blktouch
 blmbycar
 blmbycaru
+blnctry
 block
 block2
 blockade
@@ -2328,6 +2338,7 @@ br_p17
 bradley
 brain
 brainbaf
+brainbox2
 braiplus
 brapboys
 brapboysp
@@ -2843,6 +2854,7 @@ cclimbr2a
 cclimbroper
 cclimbrrod
 cclownz
+ccly
 ccmk1
 ccmk2
 ccmk2a
@@ -2911,6 +2923,7 @@ cgidjp
 cgip23b
 cgip30b
 cgip30cs
+cgip30e
 cgold
 cgold2
 cgold2a
@@ -3031,9 +3044,9 @@ chkndraw
 chkndrawa
 chkun
 chleague
-chleagul
-chleagxa
-chleagxb
+chleaguel
+chleaguexa
+chleaguexb
 chmate
 chmpnum
 chmpnuma
@@ -3108,6 +3121,8 @@ cjdh2
 cjdh2a
 cjdh2b
 cjdh2c
+cjdh2d
+cjdh6th
 cjdlz
 cjdn
 cjffruit
@@ -3331,6 +3346,7 @@ coh1002v
 coh3002c
 coh3002t
 colecofl
+colision
 colmns97
 colony7
 colony7a
@@ -3570,6 +3586,7 @@ cprogolf
 cprogolf18
 cprogolfj
 cps1mult
+cps2000
 cpsoccer
 cpsoccerj
 cptennis
@@ -3653,6 +3670,7 @@ crszonev3b
 crszonev3b2
 crszonev4a
 cruisin
+cruisin5
 crush
 crush2
 crush3
@@ -3670,6 +3688,7 @@ crusnexoaa
 crusnexob
 crusnexoc
 crusnexod
+crusnexoe
 crusnusa
 crusnusa11
 crusnusa20
@@ -3720,7 +3739,6 @@ crzybugs103jp
 crzybugs200us
 crzybugs202us
 crzyddz
-crzyddz2
 crzytaxi
 cs10_sps
 cs11_sps
@@ -4090,6 +4108,8 @@ dbreed
 dbreedjm72
 dbreedm72
 dbridgec
+dbsha
+dbshahb
 dbz
 dbz2
 dbz2bl
@@ -4135,6 +4155,13 @@ ddcrewu
 ddcrewud
 dddoor
 ddealer
+ddellf96
+ddellf97
+ddellf97a
+ddellf97b
+ddellf97c
+ddellf97d
+ddellf97e
 ddenlovj
 ddenlovr
 ddenlovrb
@@ -4269,6 +4296,7 @@ decodark15
 decodark16
 decomult
 dectalk
+deecoseal
 deepfrz
 deepfrzu
 deerhunt
@@ -4359,6 +4387,7 @@ devstorsx
 devzone
 devzone2
 df_djpkr
+df_djpkra
 dfeverg
 dfeveron
 dfjail
@@ -4595,6 +4624,7 @@ dmnfrnt
 dmnfrnt102
 dmnfrnt103
 dmnfrntpcb
+dmnslayg
 dmodrbcc
 dms5000
 dms86
@@ -6569,6 +6599,7 @@ evlfight
 evmbug
 evolhh
 evosocc
+ewalk2tv
 ewf
 ex8000
 excal
@@ -6818,6 +6849,7 @@ fball_ii
 fbclass
 fbdeluxe
 fbdeluxeo
+fccomp88
 fcnudge
 fcnudgeo
 fcnudgeo2
@@ -6893,6 +6925,7 @@ fearless
 feldo
 fengyunh
 fenix
+fenixexpl
 fenixn
 ferieki
 feriepu
@@ -7105,6 +7138,7 @@ fixitflx
 fjbuster
 fjholden
 fk1
+fkddz2
 fl7_2000
 fl7_2k16
 fl7_3121
@@ -8485,6 +8519,7 @@ gticlubj
 gticlubu
 gtipoker
 gtipokra
+gtipokrb
 gtmr
 gtmr2
 gtmr2a
@@ -9018,11 +9053,13 @@ hiimpactp
 hikaru
 hikcheck
 hilice
+hilokimb
 himesiki
 hipai
 hipai2
 hipoly
 hippodrm
+hippofr
 hirol_fr
 hirol_gr
 hirol_gr_210
@@ -9051,6 +9088,7 @@ hk1000
 hkagerou
 hkb502
 hkb502a
+hkuranai
 hldspin1
 hldspin1dt
 hldspin1o
@@ -9105,6 +9143,7 @@ homura
 honeybee
 honeydol
 honeypot
+hongmayi
 honktonk
 honooinv
 hook
@@ -9220,6 +9259,7 @@ hp9845a
 hp9845s
 hparadis
 hpierrot
+hplanet
 hpolym84
 hppyvideo
 hprot1
@@ -9374,6 +9414,7 @@ icefever
 icemania
 icescape
 ichiban
+ichiban235
 ichir
 ichirbl
 ichirj
@@ -11147,6 +11188,7 @@ jangtaku
 janjans1
 janjans2
 jankenmn
+jankmg2
 janoh
 janoha
 janohb
@@ -11223,6 +11265,7 @@ jinhulu2100gi
 jinhulu2101is
 jinhulu2120gi
 jinpaish
+jinsanse
 jitsupro
 jituroku
 jjack
@@ -11339,6 +11382,8 @@ jparkjc
 jparkmb
 jpcoin
 jpcoin2
+jpddz
+jpddza
 jpinball
 jpjcoin
 jplstw20
@@ -11427,6 +11472,7 @@ jy_03
 jy_11
 jy_12
 jyangoku
+jzst
 jzth
 k1
 k1003
@@ -11451,6 +11497,7 @@ kagekiu
 kaguya
 kaguya2
 kaguya2f
+kaimenhu
 kaiserkn
 kaiserknj
 kaitei
@@ -11493,6 +11540,7 @@ karnovjbl
 kartduel
 kartduelja
 kas89
+katori
 kattobas
 kazan
 kbadlands
@@ -11579,6 +11627,7 @@ kgbird
 kgbirda5
 kgbirdnz
 kgbirdnza
+kghmytda
 kgradius
 kick
 kick4csh
@@ -11639,6 +11688,7 @@ kingt_l1
 kingtut
 kingyo
 kingyoch
+kingyosu
 kinniku
 kinniku2
 kinstb
@@ -11758,6 +11808,7 @@ kot
 kotbinsp
 kotbinyo
 kotbinyosu
+kotekita
 kothello
 kouyakyu
 kov
@@ -11814,6 +11865,11 @@ kram
 krama
 krame
 kramermc
+krampcb2
+krampcb3
+krampcb4
+krampcb5
+krampcb6
 krokha
 kron180
 kroozr
@@ -11997,6 +12053,8 @@ leadera
 leadsng2
 leaguemn
 leaguemna
+leapland
+leappawp
 learnwin
 learnwin1
 learnwin2
@@ -12102,6 +12160,7 @@ lhaunt_7
 lhaunt_8
 lhb
 lhb2
+lhb3
 lhbv33c
 lhdmg
 lhdmgp
@@ -12429,6 +12488,7 @@ lxcmcysp
 lxcmcysw
 lxcyber
 lxnoddy
+lxpcsp
 lxspidaj
 lxts3
 lyon16
@@ -20097,6 +20157,7 @@ mamonoro
 mandinga
 mandingac
 mandingaeg
+mandingag
 mandingarf
 mandinka
 mangchi
@@ -20202,7 +20263,10 @@ matchme
 matchnum
 matet
 matet10
+matet100
+matet220
 matet300
+matetsl
 mathmagi
 mathmarv
 matmania
@@ -20406,6 +20470,7 @@ megat5t
 megat5tg
 megat6
 megat7e
+megata
 megatack
 megatacka
 megatrix
@@ -20567,6 +20632,7 @@ mgcs2h
 mgcs2l
 mgcs3
 mgcsa
+mgcsb
 mgdh
 mgdha
 mghammer
@@ -20738,6 +20804,7 @@ mjdiplob
 mjegolf
 mjelct3
 mjelct3a
+mjelct3b
 mjelct3bl
 mjelctrb
 mjelctrn
@@ -20770,9 +20837,9 @@ mjmyornt
 mjmyorntr
 mjmyster
 mjmyuniv
-mjmyunivbl
-mjmyunivbl2
+mjmyunivh
 mjmywrld
+mjmywrldt
 mjnanpaa
 mjnanpas
 mjnanpau
@@ -21469,6 +21536,8 @@ mx3210
 mx5000
 mxsqy
 my1stddr
+myaasa
+myaass
 myac220
 myangel
 myangel2
@@ -21666,6 +21735,7 @@ nerutona
 nesm8
 nesm8a
 nesm8b
+nesvt270
 netchu02b
 netchu02c
 netmerc
@@ -21832,14 +21902,19 @@ noki8850
 noki8890
 nomnlnd
 nomnlndg
+nor6007a
+nor6007b
 noraut3a
 noraut3b
 norautdx
 norautjo
 norautjp
+norautn1a
 norautp
+norautpb
 norautpl
 norautpn
+norautpt
 norautra
 norautrh
 norautu
@@ -21941,7 +22016,7 @@ numanath
 numanathj
 number1
 number10
-numbr10l
+number10l
 numcrash
 nummunch
 nunchaku
@@ -22044,6 +22119,7 @@ olysoc92b
 omar1
 omar2
 omatsuri
+omdisv22
 omega
 omegaa
 omegab
@@ -22253,6 +22329,7 @@ paddlema
 painter
 paintlad
 paintrlr
+paipail3
 pairlove
 pairmtch
 pairs
@@ -22328,6 +22405,7 @@ papillon
 paprazzi
 papsudok
 para2dx
+paraca
 paradar
 paradice
 paradise
@@ -23049,6 +23127,7 @@ petaco2
 petacon
 petacona
 peterpak
+petitlot
 petshop
 petshopa
 pettanp
@@ -23652,6 +23731,9 @@ pokio
 pokiwc162
 pokonl97
 pokonyan
+pokplus
+pokplusa
+pokplusb
 pokrdice
 pokrwild
 polar
@@ -24742,6 +24824,7 @@ rcasinoo
 rcdino4
 rchase
 rchase2
+rchase2a
 rchasej
 rchasejb
 rcirulet
@@ -25496,6 +25579,7 @@ samsptk
 samurai
 samuraia
 samuraij
+sandayi
 sandor
 sandscrp
 sandscrpa
@@ -25506,6 +25590,7 @@ sanma
 sanremmg
 santam
 sanxpet
+sanxpeta
 sapizps3
 sapizps3a
 sapizps3b
@@ -31258,6 +31343,7 @@ searchp2
 searthie
 searthin
 searthina
+searthinc
 seawitch
 seawld
 seawldd1
@@ -31646,6 +31732,7 @@ sharkt
 sharkusb
 sharrier
 sharrier1
+shatekds
 shateki
 shdancbl
 shdancbla
@@ -31965,7 +32052,7 @@ slc1
 sldeluxe
 sleicpin
 slepachi
-sleyuan
+sleyuan2
 slikshot
 slikshot16
 slikshot17
@@ -32160,6 +32247,7 @@ soccerssu
 soccrrmt
 socrking
 socrkinga
+socrkingb
 socrkingg
 socrkingi
 sokonuke
@@ -32907,6 +32995,7 @@ speedfrk
 speedmst
 speedmsta
 speedmstb
+speedrac
 speedrcr
 speedrs
 speedspn
@@ -33126,6 +33215,8 @@ srumbler
 srumbler2
 srumbler3
 sryudens
+ss2000
+ss2000a
 ss2001
 ss_01
 ss_03
@@ -33984,6 +34075,7 @@ tatraina
 tattack
 tattass
 tattassa
+tattasso
 taturtf
 taurs_l1
 taxi_l3
@@ -34204,6 +34296,7 @@ tesorone230
 tesorone240
 test410
 test420
+testlove
 tetfight
 tetgiano
 tetgiant
@@ -34713,6 +34806,8 @@ tomy_201h
 tomy_300h
 tomy_301g
 tomy_400
+tomycar
+tomyegg
 tondemo
 tongzi
 tonpuu
@@ -34843,6 +34938,8 @@ tpkboram
 tpkborama
 tpkg2
 tpoker2
+tpoker2a
+tpoker2b
 tqst
 tqstp
 tr175
@@ -34893,6 +34990,7 @@ tripdraw
 tripfev
 tripfev105us
 tripfev107us
+tripfev108us
 tripjack
 tripjok
 triplay
@@ -35162,7 +35260,6 @@ tvboy
 tvboyii
 tvboyn
 tvcapcom
-tvdear
 tvdenwad
 tvdenwam
 tvdenwat
@@ -35326,6 +35423,7 @@ unkanyw
 unkbel
 unkboram
 unkbpmed
+unkbubsc
 unkch1
 unkch2
 unkch3
@@ -35343,7 +35441,6 @@ unkhorse
 unkhpslt
 unkitpkr
 unkkonmd
-unkljfpk
 unkpacg
 unkpacga
 unkpacgb
@@ -36429,6 +36526,7 @@ winbid
 winbidr
 winbingo
 winbingoa
+winbnk88
 windheat
 windheata
 windheatj
@@ -36601,6 +36699,7 @@ wondstcka
 wontmuch
 woodpeca
 woodpeck
+wordlnch
 worldadv
 worlddef
 worldwar
@@ -37035,6 +37134,7 @@ zexall
 zfirenze
 zgundm
 zgundmdx
+zhonggmj
 zhongguo
 zigzagb
 zigzagb2
