--- a/00-databases-00/sorted_info_creation/0XXX/neogeo.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/neogeo.ini
@@ -34,6 +34,9 @@ ct2k3sp
 cthd2003
 ctomaday
 cyberlip
+ddragon1
+ddragon1_p1
+ddragon1_p2
 diggerma
 doubledr
 dragonsh
@@ -108,6 +111,7 @@ kof95
 kof95a
 kof95h
 kof96
+kof96a
 kof96h
 kof97
 kof97h
@@ -283,6 +287,7 @@ wh2h
 wh2j
 whp
 wjammers
+xenocris
 zedblade
 zintrckb
 zupapa
