update man created ini file (mame0278)

--- a/00-databases-00/sorted_info_creation/0XXX/all_in1.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/all_in1.ini
@@ -3,15 +3,19 @@
 ablmini
 ablpinb
 arcade10
+backybbs
 ban_krkk
+barbpet
 bittboy
 brke23p2
+carled99
 cmpmx10
 cmpmx11
 cybar120
 dgun2573
 dgun2953
 dgun2959
+disppal
 dnv200fs
 dphh8630
 fapocket
@@ -23,6 +27,7 @@ gamezn2
 gprnrs1
 gprnrs16
 gujtv108
+hotwhls
 ii32in1
 ii8in1
 intact89
@@ -30,6 +35,7 @@ intg5410
 itvg49
 lexiseal
 lexizeus
+lpetshop
 lx_jg7415
 lxairjet
 lxnoddy
@@ -58,6 +64,7 @@ mc_tv200
 megapad
 mgt20in1
 miwi2_7
+mylpony
 mysprtch
 mysprtcp
 mysptqvc
@@ -65,7 +72,9 @@ namcons1
 namcons2
 njp60in1
 oplayer
+ouipdc
 pballpup
+pdc30p
 pdc100
 pdc150t
 pdc200
@@ -82,6 +91,7 @@ react
 reactmd
 rhhc152
 rminitv
+rocksock
 sarc110
 sudopptv
 supreme
@@ -106,6 +116,7 @@ vgtablet
 vjpp2
 vsplus
 wfmotor
+whacmole
 zdog
 zone7in1
 zudugo
