update auto/man created ini files (mame0278)

--- a/00-databases-00/sorted_info_creation/0XXX/90º.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/90º.ini
@@ -1,4 +1,5 @@
 005
+005a
 1941
 1941j
 1941r1
@@ -376,6 +377,7 @@ blockbl
 blockcar
 blockcarb
 blockch
+blockfvr
 blockgal
 blockgalb
 blockj
@@ -620,6 +622,7 @@ cosmica1
 cosmica22
 cosmica23
 cosmica2a
+cosmicbat
 cosmicg
 cosmicgi
 cosmicin
@@ -1036,12 +1039,14 @@ flkatck
 flkatcka
 floritas
 floritasm
+flshback
 flyboy
 flyboyb
 flytiger
 flytigera
 fnkyfish
 fnshark
+fntspcian
 fourplay
 freekick
 freekicka
@@ -1190,6 +1195,7 @@ gatsbee
 gbusters
 gbustersa
 gcpinbal
+gcs2mgp
 geebee
 geebeea
 geebeeb
@@ -1589,6 +1595,7 @@ ladybug
 ladybugb
 ladybugb2
 ladybugg
+ladybugg2
 ladyfrog
 ladykill
 ladymstr
@@ -1621,6 +1628,7 @@ legionjb2
 legofair
 lethalth
 levers
+lexi30
 lgtnfght
 lgtnfghta
 lgtnfghtu
@@ -1652,6 +1660,7 @@ lwingsa
 lwingsb
 lwingsj
 lwingsja
+lxcmcysp
 m660
 m660b
 m660j
@@ -1796,6 +1805,7 @@ mooncrsl
 mooncrst
 mooncrstg
 mooncrsto
+mooncrsts
 mooncrstso
 mooncrstu
 mooncrstuk
@@ -1882,6 +1892,8 @@ mv1sfx
 mv1sfx2
 mv1sfxa
 mx5000
+mympac
+mypac
 myqbert
 mystston
 myststono
@@ -2133,6 +2145,7 @@ plgirls2b
 plusalph
 plygonet
 pntnpuzl
+pntnpuzls
 pokrdice
 polaris
 polarisa
@@ -2392,6 +2405,7 @@ rockn3
 rockn4
 rockna
 rocknms
+rocknms10
 rocktcnvy
 rocktrv2
 rocnrope
@@ -2414,6 +2428,7 @@ route16d
 routex
 routexa
 rshark
+rsharka
 rtriv
 rugrats
 rumba
@@ -2446,6 +2461,7 @@ sandscrp
 sandscrpa
 sandscrpb
 sasuke
+sasukea
 satansat
 satansata
 satansatind
