--- a/00-databases-00/sorted_info_creation/0XXX/classich.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/classich.ini
@@ -123,6 +123,8 @@ msoccer2
 msthawk
 mwcbaseb
 mwcfootb
+nsmb3
+nsmw
 nstarfox
 nummunch
 packmon
@@ -171,8 +173,11 @@ trspacmis
 trspider
 trsrescue
 trthuball
+trtreisl
 uboat
+uchitari
 ufombs
+vesarif
 vinvader
 wildfire
 zackman
