--- a/00-databases-00/sorted_info_creation/0XXX/good.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/good.ini
@@ -303,6 +303,7 @@ akumajou
 akumajoun
 al520ex
 aladmdb
+alantin
 albert
 alcat_l7
 alcon
@@ -862,6 +863,7 @@ backfire
 backfirea
 backfirt
 backgamc
+backybbs
 baddog
 baddudes
 badlands
@@ -895,16 +897,22 @@ ban_krrj
 bananadr
 banbam
 bandido
+bandit
 bang
+banga
+bangb
 bangball
 bangbead
 bangj
+bangja
+bangjb
 bankp
 bankpt
 bankshot
 baracuda
 baraduke
 barata
+barbpet
 barek2ch
 barek2mb
 barek3mb
@@ -1018,6 +1026,7 @@ bbustersj
 bbustersja
 bbustersu
 bbustersua
+bcats_f1
 bcats_g4
 bcats_l2
 bcats_l5
@@ -1108,6 +1117,7 @@ bigfight
 bigfightj
 bigjoke
 bigkarnk
+bigkarnka
 bigkong
 bigkonggx
 bigprowr
@@ -1232,6 +1242,7 @@ blockbl
 blockcar
 blockcarb
 blocken
+blockfvr
 blockgal
 blockgalb
 blockhl
@@ -1459,9 +1470,9 @@ brkball
 brkblast
 brke23p2
 brkthru
-brkthrubl
 brkthruj
 brkthrut
+brkthruu
 brod
 bronx
 brubber
@@ -1478,6 +1489,8 @@ bs4thmix
 bs94
 bscompmx
 bsebman
+bsebmanbl
+bsebmanbl2
 bshark
 bsharkj
 bsharkjjs
@@ -1750,6 +1763,7 @@ cardline
 carhntds
 carjmbre
 carket
+carled99
 carnevil
 carnevil1
 carnival
@@ -2057,6 +2071,7 @@ chmpnuma
 chocovdr
 chokchok
 choko
+chokop
 choplift
 chopliftbl
 chopliftu
@@ -2267,7 +2282,6 @@ coh3002t
 coleco
 colecop
 colision
-colmns97
 colony7
 colony7a
 colt
@@ -2285,6 +2299,7 @@ comet_l5
 comg074
 comg076
 comg079
+comg079b
 comg080
 comg094
 comg107
@@ -2412,6 +2427,7 @@ cosmica1
 cosmica22
 cosmica23
 cosmica2a
+cosmicbat
 cosmicg
 cosmicgi
 cosmicin
@@ -2845,6 +2861,7 @@ dbdancem
 dblagent
 dblaxle
 dblaxleu
+dblaxleua
 dblaxleul
 dblchal
 dblchalc1
@@ -3199,6 +3216,7 @@ discoboy
 discoboyp
 discof
 discpal
+disppal
 ditto
 divebomb
 diverboy
@@ -3328,6 +3346,7 @@ doraemon
 doraglob
 doraglobf
 doraglobg
+doraglobuk
 dorapdc
 doraphon
 doraphonf
@@ -3434,6 +3453,7 @@ drivfrcg
 drivfrcp
 drivfrcsg
 drivfrct
+drkseal
 drktnjr
 drmario
 drmicro
@@ -3743,8 +3763,14 @@ eti660
 eto
 etoa
 eturtles
+eurobeeb1
+eurobeeb2
+eurobeeb3c
+eurobeeb3m
 euroch92
 euroch92j
+eurocube09
+eurocube65
 eurogael
 europa
 evilngt
@@ -4254,6 +4280,7 @@ floritas
 floritasm
 flower
 flowerj
+flowerjb
 flstory
 flstoryo
 flyball
@@ -4272,6 +4299,7 @@ fmx
 fncywld
 fnkyfish
 fnshark
+fntspcian
 fnvision
 foathens
 foodf
@@ -4281,6 +4309,8 @@ foodfc
 foolrace
 footbpow
 footbpow11
+footbpow12
+footbpow14
 footchmp
 forcebrk
 forceii
@@ -4565,6 +4595,7 @@ galivan3
 galkaika
 galkamika
 galkoku
+galkokua
 gallag
 gallag50
 gallop
@@ -4768,6 +4799,7 @@ geostorma
 gepoker
 gepoker1
 gepoker2
+gepoker2a
 gepoker3
 getaway
 getrich
@@ -4847,12 +4879,19 @@ glasgow
 glass
 glass10
 glass10a
+glass10b
+glass10c
+glass10d
+glassa
+glassat
 glasskr
+glasskra
 gldarrow
 gldncrwn
 gldnpkr
 glizrdce
 gloc
+glocj
 glocr360
 glocr360j
 glocu
@@ -5223,6 +5262,7 @@ gticlubj
 gticlubu
 gtipoker
 gtipokrb
+gtipokrba
 gtmr
 gtmr2
 gtmr2a
@@ -5711,6 +5751,7 @@ hotshock
 hotshockb
 hotsmash
 hotwhl2p
+hotwhls
 hourouki
 housecard
 housemn2
@@ -5774,6 +5815,7 @@ hthero95u
 htheroj
 htherou
 httip_l1
+huahuas5
 hunchbak
 hunchbaka
 hunchbgb
@@ -5958,6 +6000,7 @@ intel02
 interact
 intervsn
 inthunt
+inthuntk
 inthuntu
 intlaser
 intlc44
@@ -6280,39 +6323,65 @@ jackuse
 jailbrek
 jailbrekb
 jajamaru
+jak_1vs
+jak_5thg
+jak_avtr
 jak_batm
 jak_capc
 jak_care
+jak_cind
+jak_ctah
 jak_dbz
 jak_disf
 jak_disn
+jak_dond
 jak_dora
 jak_dorr
+jak_dpma
 jak_dpr
 jak_dprs
+jak_dwa
 jak_dwmn
 jak_dwmno
 jak_fan4
+jak_gdg
+jak_hm1m
+jak_hmbb
+jak_hsm
+jak_jpdy
 jak_just
+jak_marv
 jak_mk
 jak_mpac
+jak_mpaco
+jak_mpacq
 jak_mpacw
 jak_nick
+jak_ntsc
+jak_pacg
 jak_pix
 jak_pooh
 jak_potc
 jak_powr
+jak_rapm
 jak_sbfc
 jak_sbjd
+jak_sesa
+jak_shrk
 jak_sith
 jak_sithp
+jak_slpb
+jak_spac
 jak_spd3
 jak_spdm
+jak_spdv
 jak_supm
 jak_swot
 jak_wall
 jak_wof
+jak_wof2
 jak_wwe
+jak_xmen
 jak_xmenp
 jamesb
 jamesb2
@@ -6386,6 +6455,7 @@ jjsquawko
 jjstrip
 jking02
 jking103a
+jking105us
 jking200pr
 jl2050
 jleague
@@ -6575,6 +6645,7 @@ kagekiu
 kaguya
 kaguya2
 kaguya2f
+kaimenhu
 kaiserkn
 kaiserknj
 kaitei
@@ -6850,6 +6921,7 @@ kof99h
 kof99k
 kof99ka
 kof99p
+koftball
 koikoi
 koikois
 koikois2
@@ -7001,6 +7073,7 @@ ladybug
 ladybugb
 ladybugb2
 ladybugg
+ladybugg2
 ladyfrog
 ladygolf
 ladygolfe
@@ -7074,6 +7147,7 @@ lastfortk
 lastfour
 lasthope
 lastkm
+lastkma
 lastmisn
 lastmisnj
 lastmisnu5
@@ -7233,6 +7307,7 @@ littlerb
 liveafb
 livegal
 livequiz
+lizardhunt
 lizwiz
 lk3000
 lkage
@@ -7307,6 +7382,7 @@ lottofun
 lovehous
 loverboy
 lpadv
+lpetshop
 lrescue
 lrescueabl
 lrescuem
@@ -7403,6 +7479,7 @@ lynx128k
 lynx48k
 lynx96k
 lyon16
+lyon16a
 lyon32
 lyon32t
 lyon32t8
@@ -7644,8 +7721,9 @@ maniach2
 maniacsp
 maniacsq
 maniacsqa
+maniacsqb
+maniacsqc
 maniacsqs
-maniacsqu
 manybloc
 mappy
 mappyj
@@ -7685,12 +7763,27 @@ marvlandup
 masao
 mastboy
 mastboya
+mastboyb
+mastboyc
+mastboyd
 mastboyi
 mastboyia
+mastboyib
+mastboyic
+mastboyid
+mastboyiol
+mastboyitst
+mastboyiv2
+mastboyiv2a
 mastboyo
 mastboyoa
 mastboyob
 mastboyoc
+mastboyod
+mastboyol
+mastboyola
+mastboyv2
+mastboyv2a
 master
 masterw
 masterwj
@@ -8178,6 +8271,7 @@ mjnquestb
 mjprivat
 mjreach
 mjreach1
+mjreach1a
 mjreacha
 mjreachbl
 mjreachp2
@@ -8191,6 +8285,7 @@ mjsister
 mjuraden
 mjvegas
 mjvegasa
+mjxysl
 mjyarou
 mjyarou2
 mjyougo
@@ -8388,6 +8483,7 @@ mooncrsl
 mooncrst
 mooncrstg
 mooncrsto
+mooncrsts
 mooncrstso
 mooncrstu
 mooncrstuk
@@ -8741,6 +8837,7 @@ myfairld
 myhero
 myherobl
 myherok
+mylpony
 myqbert
 mysprtch
 mysprtcp
@@ -8922,6 +9019,7 @@ newufo_sonic
 newufo_xmas
 newxpang
 newxpanga
+nextcent
 nextfase
 nf500a
 nfb96
@@ -9076,10 +9174,14 @@ nslasher
 nslasherj
 nslashers
 nslasheru
+nsmb3
+nsmw
 nsnova
 nsnovaa
 nspirit
 nspiritj
+nsplashkr
+nsplashkra
 nss
 nstarfox
 nstocker
@@ -9280,6 +9382,7 @@ otonano
 otwalls
 ougonhaib1
 ougonhaib2
+ouipdc
 outfxies
 outfxiesa
 outfxiesj
@@ -9602,6 +9705,7 @@ pcvga
 pdc100
 pdc150t
 pdc200
+pdc30p
 pdc40t
 pdc50
 pdp1
@@ -9609,6 +9713,7 @@ pdrift
 pdrifta
 pdrifte
 pdriftj
+pdriftjb
 pdriftl
 pebe0013
 pebe0014
@@ -10997,6 +11102,7 @@ pzletime
 pzloop2
 pzloop2j
 pzloop2jd
+pzloop2jp
 pzloop2jr1
 qad
 qadjr
@@ -11014,6 +11120,7 @@ qdrmfgp2
 qfire
 qgakumon
 qgh
+qiji6
 qix
 qix2
 qixa
@@ -11072,6 +11179,7 @@ quester
 questers
 quickjac
 quickp5
+quickshts
 quintono
 quintoon
 quiz
@@ -11593,6 +11701,9 @@ rittam
 riviera
 rivieraa
 rivierab
+rivierac
+rivierad
+rivierae
 rjammer
 rk7007
 rk700716
@@ -11697,10 +11808,12 @@ rockn3
 rockn4
 rockna
 rocknms
+rocknms10
 rockpin
 rockrage
 rockragea
 rockragej
+rocksock
 rockstar
 rocktcnvy
 rocktris
@@ -11725,6 +11838,7 @@ roldfroga
 rollace
 rollace2
 rollerg
+rollerga
 rollergj
 rollfr
 rollfr_2
@@ -11810,6 +11924,7 @@ rs128
 rs2030
 rsgun
 rshark
+rsharka
 rthun2
 rthun2j
 rthunder
@@ -11980,6 +12095,7 @@ sarge
 sarukani
 sasissu
 sasuke
+sasukea
 satansat
 satansata
 satansatind
@@ -12171,8 +12287,8 @@ sdibl6
 sdk80
 sdk85
 sdk86
-sdmg2
-sdmg2a
+sdmg2754ca
+sdmg2754cb
 sdodgeb
 sdtennis
 sdtor
@@ -12834,7 +12950,10 @@ sltblgpo
 sltblgtk
 sltblgtka
 sltpcycl
+sltpcycla
+sltpcyclb
 sltpstep
+sltpstepa
 slyspy
 slyspy2
 slyspy3
@@ -13157,6 +13276,9 @@ speedspn
 speedup
 speedup10
 speedup12
+speedup20
+speedup20a
+speedup21
 speglsht
 spektr01
 spektrbk
@@ -13222,7 +13344,12 @@ spkrform
 splasfgt
 splash
 splash10
+splash11
+splash12
+splashkr
 splashms
+splashmsa
+splashna
 splat
 splatter
 splatter2
@@ -13290,6 +13417,7 @@ sqixu
 squaitsa
 squale
 squash
+squasha
 squizchs
 sraider
 sranger
@@ -13353,6 +13481,11 @@ ssf2xjr1d
 ssf2xjr1r
 ssfball
 ssfindo
+ssh2000
+ssh2000a
+ssh2000wf
+ssh2001
+ssh2001a
 sshangha
 sshanghab
 sshanghaj
@@ -13393,6 +13526,7 @@ sspaceatc
 sspeedr
 sspiritj
 sspirits
+ssplash
 ssports4
 ssprint
 ssprint1
@@ -13418,6 +13552,7 @@ ssrj
 sss
 sstar28k
 sstar97
+sstar97b
 sstarbtl
 sstarcrs
 sstingry
@@ -13707,8 +13842,11 @@ suratkj
 sureshot
 sureshoto
 surfplnt
+surfplnt10
+surfplnt12
 surfplnt20
 surfplnt30
+surfplnt31
 surfplnt40
 survarts
 survartsj
@@ -13914,7 +14052,9 @@ targc
 targeth
 targeth10
 targetha
+targethb
 tarzan103m
+tarzan106fa
 tarzan202fa
 tarzanb
 tarzanc
@@ -14036,6 +14176,7 @@ tekken3b
 tekken3c
 tekken3d
 tekken3ja
+tekken3jd
 tekken3je1
 tekken3ua
 tekken3ud
@@ -14197,6 +14338,15 @@ thook
 thoop
 thoop2
 thoop2a
+thoop2b
+thoop2c
+thoop2d
+thoop2e
+thoopa
+thoopb
+thoopna
+thoopnna
+thoopnnaa
 thor
 threeds
 threedsa
@@ -14547,9 +14697,13 @@ totspies
 toucheme
 touchemea
 touchgo
-touchgoe
-touchgok
-touchgon
+touchgoa
+touchgona
+touchgonna
+touchgonnaa
+touchgonnab
+touchgonnac
+touchgoun
 touchme
 toukon3
 tour4000
@@ -14585,6 +14739,7 @@ tpp311
 tps312
 tqst
 tqstp
+tr707
 trackfld
 trackfldc
 trackfldnz
@@ -14593,6 +14748,7 @@ trally
 tranqgun
 transfrm
 tranz330
+trapeze
 travrusa
 travrusab
 travrusab2
@@ -14688,6 +14844,7 @@ trstaro
 trstaroj
 trsvidtx
 trthuball
+trtreisl
 truckk
 truco
 truxton
@@ -14897,6 +15054,7 @@ uccopsar
 uccopsaru
 uccopsj
 uccopsu
+uchitari
 uchroma68
 uchuuai
 ucv102
@@ -15123,6 +15281,7 @@ venture5b
 venus
 venusdm
 verbena
+vesarif
 vespovar
 vesta
 vf2
@@ -15220,6 +15379,7 @@ vindictre
 vindictre3
 vindictre4
 vindictrg
+vinnpukh
 vinvader
 viofight
 viofightj
@@ -15277,6 +15437,7 @@ vortex
 votrpss
 votrtnt
 vp111
+vparadis2
 vpoker
 vpool
 vr
@@ -15475,6 +15636,7 @@ wh1ha
 wh2
 wh2h
 wh2j
+whacmole
 wheelrun
 whirl_l2
 whirl_l3
@@ -15620,11 +15782,18 @@ wpksocv2
 wrally
 wrally2
 wrally2a
+wrally2b
+wrally2c
+wrally2d
 wrallya
+wrallyac
 wrallyat
 wrallyata
 wrallyb
 wrallyc
+wrallyd
+wrallye
+wrallymp
 wrecking
 wrestwar
 wrestwar1
@@ -15775,7 +15944,12 @@ xmvsfu
 xmvsfu1d
 xmvsfur1
 xmvsfur2
+xorwflat
+xorwflata
+xorwldms
+xorwldmsa
 xorworld
+xorworlda
 xsleena
 xsleenab
 xsleenaba
