--- a/00-databases-00/sorted_info_creation/0XXX/jakks.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/jakks.ini
@@ -1,35 +1,61 @@
+jak_1vs
+jak_5thg
+jak_avtr
 jak_batm
 jak_capc
 jak_care
+jak_cind
+jak_ctah
 jak_dbz
 jak_disf
 jak_disn
+jak_dond
 jak_dora
 jak_dorr
+jak_dpma
 jak_dpr
 jak_dprs
+jak_dwa
 jak_dwmn
 jak_dwmno
 jak_fan4
+jak_gdg
+jak_hm1m
+jak_hmbb
+jak_hsm
+jak_jpdy
 jak_just
+jak_marv
 jak_mk
 jak_mpac
+jak_mpaco
+jak_mpacq
 jak_mpacw
 jak_nick
+jak_ntsc
+jak_pacg
 jak_pix
 jak_pooh
 jak_potc
 jak_powr
+jak_rapm
 jak_sbfc
 jak_sbjd
 jak_sdoo
+jak_sesa
+jak_shrk
 jak_sith
 jak_sithp
+jak_slpb
+jak_spac
 jak_spd3
 jak_spdm
+jak_spdv
 jak_supm
 jak_swot
 jak_wall
 jak_wof
+jak_wof2
 jak_wwe
+jak_xmen
 jak_xmenp
