--- a/00-databases-00/sorted_info_creation/0XXX/lightgun.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/lightgun.ini
@@ -265,7 +265,11 @@ b256hp
 b500
 bam16a0
 bang
+banga
+bangb
 bangj
+bangja
+bangjb
 basf7120
 basis108
 bay1000c
@@ -664,6 +668,12 @@ epsax
 epsax2e
 epsax3
 euroat
+eurobeeb1
+eurobeeb2
+eurobeeb3c
+eurobeeb3m
+eurocube09
+eurocube65
 europc
 europc2
 euroxt
@@ -784,6 +794,8 @@ funcube3
 funcube4
 funcube5
 funlddlx
+funlddlx2
+funlddlx4
 g13jnr
 g13knd
 ga486am
@@ -1006,6 +1018,7 @@ jakms41
 jb3000
 jd363
 jd364
+jd366
 jd368
 jdredd
 jdreddb
@@ -1211,6 +1224,7 @@ mc68000
 mcword
 mcword_de
 md4duvc
+mdhh100
 mdhorse
 mechatt
 mechattj
@@ -1291,6 +1305,7 @@ microbx2
 microeng
 mijx30gp
 mini2440
+minib
 miniforce
 minisys2k
 mistrum
@@ -1478,6 +1493,7 @@ op82c391
 op82c392
 opti495slc
 opti495xlc
+optomaxv
 opwolf
 opwolf3
 opwolf3j
@@ -1712,6 +1728,7 @@ plus4p
 pm486pu
 pn8800
 pntnpuzl
+pntnpuzls
 pocketbk
 pocketbk2
 pofo
@@ -1766,6 +1783,8 @@ psion5mx
 psionhc100
 psionhc110
 psionhc120
+psionwa
+psionwamx
 pt319a
 pt430
 pt432b
@@ -1829,6 +1848,7 @@ ql_us
 qnilemax
 quake
 quickjac
+quickshts
 quorum48
 qvt70
 qvt82
@@ -2065,6 +2085,7 @@ tanodr64h
 targeth
 targeth10
 targetha
+targethb
 tatacot
 tc2048
 td4ipaio
@@ -2078,6 +2099,7 @@ tekken3b
 tekken3c
 tekken3d
 tekken3ja
+tekken3jd
 tekken3je1
 tekken3ua
 tekken3ud
@@ -2177,6 +2199,7 @@ towerat2xx
 tpc310
 tpp311
 tps312
+triplex
 trivialp
 trivialpd
 trivialpo
