update auto/man created ini files (mame0278)(2nd changes)

--- a/00-databases-00/sorted_info_creation/0XXX/all_in1.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/all_in1.ini
@@ -18,6 +18,8 @@ dgun2959
 disppal
 dnv200fs
 dphh8630
+dreamlif
+dsgnwrld
 fapocket
 fccomp88
 fcpocket
@@ -74,10 +76,10 @@ njp60in1
 oplayer
 ouipdc
 pballpup
-pdc30p
 pdc100
 pdc150t
 pdc200
+pdc30p
 pdc40t
 pdc50
 pgs268
@@ -102,7 +104,6 @@ taitons1
 taitons2
 tak_geig
 tak_wdg
-tblkkuzug
 techni4
 timetp36
 tmntmutm
